# bmc_lab

./: .editorconfig  .gitattributes  .gitignore  README.md
mini-openbmc-platform-service/: CMakeLists.txt  README.md
mini-openbmc-platform-service/docs/: architecture.md  design-decisions.md  development-troubleshooting.md  system-internals.md
mini-openbmc-platform-service/kernel/mini_i2c_hwmon/: Makefile  README.md  mini_i2c_hwmon.c  mini_i2c_hwmon.h
mini-openbmc-platform-service/kernel/mini_pcie_telemetry/: Makefile  README.md  mini_pcie_telemetry.c  mini_pcie_telemetry.h
mini-openbmc-platform-service/libs/common/: byte_buffer.hpp  file_utils.hpp  logger.cpp  logger.hpp  status.hpp  time_utils.hpp
mini-openbmc-platform-service/libs/dbus/: dbus_client.cpp  dbus_client.hpp  dbus_names.hpp  dbus_server.cpp  dbus_server.hpp
mini-openbmc-platform-service/libs/hwmon/: hwmon_sensor_backend.cpp  hwmon_sensor_backend.hpp
mini-openbmc-platform-service/libs/mctp/: mctp_packet.cpp  mctp_packet.hpp  mctp_reassembler.cpp  mctp_reassembler.hpp  uds_mctp_transport.cpp  uds_mctp_transport.hpp
mini-openbmc-platform-service/libs/pcie/: mini_pcie_backend.cpp  mini_pcie_backend.hpp  mini_pcie_ioctl.cpp  mini_pcie_ioctl.hpp  pci_sysfs_reader.cpp  pci_sysfs_reader.hpp
mini-openbmc-platform-service/libs/pldm/: pldm_common.cpp  pldm_common.hpp  pldm_pdr.cpp  pldm_pdr.hpp  pldm_type0.cpp  pldm_type0.hpp  pldm_type2.cpp  pldm_type2.hpp
mini-openbmc-platform-service/libs/redfish/: redfish_mapper.cpp  redfish_mapper.hpp
mini-openbmc-platform-service/libs/sensor/: sensor_backend.hpp  sensor_reading.hpp  sensor_types.hpp  threshold.hpp  threshold_event_engine.cpp  threshold_event_engine.hpp
mini-openbmc-platform-service/scripts/: build.sh  build_kernel_modules.sh  clean.sh  demo_dbus_objects.sh  demo_fault_injection.sh  demo_i2c_hwmon.sh  demo_mctp_pldm.sh  demo_pcie_kernel_telemetry.sh  demo_redfish_sensors.sh  install_deps.sh  load_kernel_modules.sh  run_bmc_sensor_service.sh  run_pldm_endpoint_agent.sh  run_redfish_service.sh  run_session.sh  smoke_test.sh  test.sh  unload_kernel_modules.sh
mini-openbmc-platform-service/services/bmc-sensor-service/: app.cpp  app.hpp  main.cpp  sensor_manager.cpp  sensor_manager.hpp
mini-openbmc-platform-service/services/pldm-endpoint-agent/: endpoint_agent.cpp  endpoint_agent.hpp  gpu_endpoint.cpp  gpu_endpoint.hpp  main.cpp  nic_endpoint.cpp  nic_endpoint.hpp
mini-openbmc-platform-service/services/redfish-service/: event_log_controller.cpp  event_log_controller.hpp  main.cpp  pcie_controller.cpp  pcie_controller.hpp  rest_server.cpp  rest_server.hpp  sensor_controller.cpp  sensor_controller.hpp
mini-openbmc-platform-service/test/: test_dbus_mapping.cpp  test_e2e_redfish_dbus_sensor.cpp  test_hwmon_sensor_backend.cpp  test_mctp_fragmentation.cpp  test_mctp_packet.cpp  test_mini_pcie_backend.cpp  test_pci_sysfs_reader.cpp  test_pldm_type0.cpp  test_pldm_type2.cpp  test_redfish_mapper.cpp  test_threshold_event_engine.cpp
mini-openbmc-platform-service/tools/: dbus_dump.cpp  mctp_ping.cpp  pci_scan.cpp  trace_cli.cpp
openbmc-ai-server-management-stack/: .editorconfig  CMakeLists.txt  README.md  graph_bmc.md  report_bmc_api.md
openbmc-ai-server-management-stack/config/: ai_server_profile.json
openbmc-ai-server-management-stack/docs/: architecture.md  dbus-object-model.md  design-notes.md  power-policy.md  redfish-api.md  thermal-policy.md
openbmc-ai-server-management-stack/scripts/: 01_install_deps.sh  02_build.sh  03_run.sh  04_demo_redfish.sh  05_demo_fault_injection.sh  98_distclean.sh  99_cleanup.sh
openbmc-ai-server-management-stack/src/: main.cpp
openbmc-ai-server-management-stack/src/app/: Application.cpp  Application.hpp
openbmc-ai-server-management-stack/src/common/: ModelTypes.hpp  TimeUtils.cpp  TimeUtils.hpp
openbmc-ai-server-management-stack/src/dbus/: DbusBridge.cpp  DbusBridge.hpp
openbmc-ai-server-management-stack/src/hardware/: AIServerProfile.cpp  AIServerProfile.hpp  HardwareModel.cpp  HardwareModel.hpp
openbmc-ai-server-management-stack/src/redfish/: RedfishApiServer.cpp  RedfishApiServer.hpp
openbmc-ai-server-management-stack/src/services/: EventLogger.cpp  EventLogger.hpp  FaultInjectionManager.cpp  FaultInjectionManager.hpp  FirmwareUpdateManager.cpp  FirmwareUpdateManager.hpp  HealthMonitor.cpp  HealthMonitor.hpp  ManagementService.cpp  ManagementService.hpp  PowerManager.cpp  PowerManager.hpp  SensorService.cpp  SensorService.hpp  ThermalManager.cpp  ThermalManager.hpp
openbmc-ai-server-management-stack/systemd/: ai-bmc-manager.service
openbmc-ai-server-management-stack/tests/: EventLoggerTest.cpp  FaultInjectionManagerTest.cpp  PowerManagerTest.cpp  ProfileParsingTest.cpp  TestHelpers.hpp  ThermalManagerTest.cpp
